--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next": "15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-youtube": "^10.1.0",
