--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "firebase": "^11.4.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^18.3.1",
