--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "firebase": "^11.4.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
@@ -42,7 +42,7 @@
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.19.1",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17"
   }
